# axum-crud

./: .env  Cargo.toml  readme.md
src/: handler.rs  main.rs  models.rs
src/db/: connect.rs
src/handler/: create_user.rs  get_all_user.rs  get_user_by_id.rs  hello_world.rs  mod.rs  not_found_handler.rs  update_user.rs
src/models/: create_user.rs  mod.rs  user.rs
src/routes/: app_route.rs  mod.rs
